[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "wfista"
version = "0.0.2"
description = "Wavelet-FISTA"
authors = [
    { name = "Kwang Eun Jang", email = "kejang@stanford.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scipy",
    "cupy"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
wfista = ["thresholding/cuda/*.cu"]

[project.urls]
Homepage = "https://github.com/kejang/wfista"
Issues = "https://github.com/kejang/wfista/issues"